[gd_scene load_steps=36 format=3 uid="uid://bntvonb1a06nv"]

[ext_resource type="Script" uid="uid://dln17eeeowjef" path="res://scripts/beetle.gd" id="1_k76xx"]
[ext_resource type="Texture2D" uid="uid://crwataw8s03l8" path="res://assets/Characters/Water Beetle Tank/Walk/BeetleW_0010.png" id="2_j2l52"]
[ext_resource type="Texture2D" uid="uid://bvcqkyu0qqvnx" path="res://assets/Characters/Water Beetle Tank/Walk/BeetleW_0020.png" id="3_w0pqo"]
[ext_resource type="Texture2D" uid="uid://b44s1anbxv0fa" path="res://assets/Characters/Water Beetle Tank/Walk/BeetleW_0030.png" id="4_0m0dr"]
[ext_resource type="Texture2D" uid="uid://bwcf4k17uddwb" path="res://assets/Characters/Water Beetle Tank/Walk/BeetleW_0040.png" id="5_53mw5"]
[ext_resource type="Texture2D" uid="uid://c0u0xv62k7cjb" path="res://assets/Characters/Water Beetle Tank/Walk/BeetleW_0050.png" id="6_f4xe4"]
[ext_resource type="Texture2D" uid="uid://4pv8qw02hbrf" path="res://assets/Characters/Water Beetle Tank/Walk/BeetleW_0060.png" id="7_ee44k"]
[ext_resource type="Script" uid="uid://dktsel320mpw7" path="res://scripts/hurtbox.gd" id="8_jrr2h"]
[ext_resource type="Texture2D" uid="uid://dv1yf85kb2dqw" path="res://assets/Characters/Water Beetle Tank/Walk/BeetleW_0070.png" id="8_k76xx"]
[ext_resource type="Texture2D" uid="uid://dghbom71t0q6i" path="res://assets/Characters/Water Beetle Tank/Attack/Lunge_1.png" id="9_k76xx"]
[ext_resource type="Texture2D" uid="uid://baew70obuy0ft" path="res://assets/Characters/Water Beetle Tank/Idle/Beetle_1.png" id="9_mhe5e"]
[ext_resource type="Texture2D" uid="uid://bjjyaf3dc3r58" path="res://assets/Characters/Water Beetle Tank/Idle/Beetle_2.png" id="10_5gsta"]
[ext_resource type="Texture2D" uid="uid://c1ykx3imhqyyu" path="res://assets/Characters/Water Beetle Tank/Attack/Lunge_2.png" id="10_mhe5e"]
[ext_resource type="Texture2D" uid="uid://bpmwi6ovfyswp" path="res://assets/Characters/Water Beetle Tank/Attack/Lunge_3.png" id="11_5gsta"]
[ext_resource type="Texture2D" uid="uid://cf0uacje6i3qm" path="res://assets/Characters/Water Beetle Tank/Idle/Beetle_3.png" id="11_r2iln"]
[ext_resource type="Texture2D" uid="uid://clpnih26tql23" path="res://assets/Characters/Water Beetle Tank/Idle/Beetle_4.png" id="12_emjoi"]
[ext_resource type="Texture2D" uid="uid://bwtml8clt4j7b" path="res://assets/Characters/Water Beetle Tank/Attack/Lunge_4.png" id="12_r2iln"]
[ext_resource type="Texture2D" uid="uid://diqmbxga4jjmw" path="res://assets/Characters/Water Beetle Tank/Attack/Lunge_5.png" id="13_emjoi"]
[ext_resource type="Texture2D" uid="uid://c2ndwkwk3uq15" path="res://assets/Characters/Water Beetle Tank/Idle/Beetle_5.png" id="13_qr3hx"]
[ext_resource type="Texture2D" uid="uid://bxij8eqqw5410" path="res://assets/Characters/Water Beetle Tank/Attack/Lunge_6.png" id="14_qr3hx"]
[ext_resource type="Texture2D" uid="uid://qo0ghtjjb10g" path="res://assets/Characters/Water Beetle Tank/Idle/Beetle_6.png" id="14_stksv"]
[ext_resource type="Texture2D" uid="uid://3rjop35mltqt" path="res://assets/Characters/Water Beetle Tank/Idle/Beetle_7.png" id="15_ans0d"]
[ext_resource type="Script" uid="uid://cfdlbfbudy12s" path="res://scripts/hitbox.gd" id="23_mhe5e"]
[ext_resource type="AudioStream" uid="uid://citc2cma8k7u4" path="res://assets/Audios/enemies/beetle charge.mp3" id="24_r2iln"]
[ext_resource type="AudioStream" uid="uid://rinopi30m814" path="res://assets/Audios/enemies/beetle hit.mp3" id="25_emjoi"]
[ext_resource type="AudioStream" uid="uid://b4uuqdo1rp4ju" path="res://assets/Audios/player/death.mp3" id="26_emjoi"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_stksv"]
radius = 40.0
height = 126.0

[sub_resource type="SpriteFrames" id="SpriteFrames_46d1w"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("13_emjoi")
}],
"loop": true,
"name": &"attack",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("9_k76xx")
}, {
"duration": 1.0,
"texture": ExtResource("10_mhe5e")
}, {
"duration": 1.0,
"texture": ExtResource("11_5gsta")
}, {
"duration": 3.0,
"texture": ExtResource("12_r2iln")
}],
"loop": false,
"name": &"charge",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_j2l52")
}, {
"duration": 1.0,
"texture": ExtResource("3_w0pqo")
}, {
"duration": 1.0,
"texture": ExtResource("4_0m0dr")
}, {
"duration": 1.0,
"texture": ExtResource("5_53mw5")
}, {
"duration": 1.0,
"texture": ExtResource("6_f4xe4")
}, {
"duration": 1.0,
"texture": ExtResource("7_ee44k")
}, {
"duration": 1.0,
"texture": ExtResource("8_k76xx")
}],
"loop": true,
"name": &"crawl",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("9_mhe5e")
}, {
"duration": 1.0,
"texture": ExtResource("10_5gsta")
}, {
"duration": 1.0,
"texture": ExtResource("11_r2iln")
}, {
"duration": 1.0,
"texture": ExtResource("12_emjoi")
}, {
"duration": 1.0,
"texture": ExtResource("13_qr3hx")
}, {
"duration": 1.0,
"texture": ExtResource("14_stksv")
}, {
"duration": 1.0,
"texture": ExtResource("15_ans0d")
}],
"loop": true,
"name": &"stand",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("14_qr3hx")
}],
"loop": true,
"name": &"vulnerable",
"speed": 5.0
}]

[sub_resource type="Animation" id="Animation_6wt1p"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Pivot/Sprite2D:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Pivot/Sprite2D:animation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"attack"]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Pivot/Sprite2D:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("HitBox/CollisionShape2D:disabled")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_nlj60"]
resource_name = "attack"
step = 0.111111
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Pivot/Sprite2D:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"attack"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Pivot/Sprite2D:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("HitBox/CollisionShape2D:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0.111111, 0.137715, 0.774171),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [true, false, true]
}

[sub_resource type="Animation" id="Animation_qrnk6"]
resource_name = "hurt"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Pivot/Sprite2D:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.15, 0.266667, 0.366667, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 1), Color(1, 0, 0, 1), Color(1, 0, 0, 1), Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_2ng8k"]
_data = {
&"RESET": SubResource("Animation_6wt1p"),
&"attack": SubResource("Animation_nlj60"),
&"hurt": SubResource("Animation_qrnk6")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_k76xx"]
size = Vector2(456.156, 367.063)

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_qr3hx"]
radius = 185.0
height = 610.0

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_emjoi"]
radius = 30.0
height = 106.0

[node name="Beetle" type="CharacterBody2D"]
collision_layer = 2
collision_mask = 2
script = ExtResource("1_k76xx")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-1, 5)
rotation = 1.5708
shape = SubResource("CapsuleShape2D_stksv")
one_way_collision = true

[node name="Pivot" type="Node2D" parent="."]

[node name="Sprite2D" type="AnimatedSprite2D" parent="Pivot"]
position = Vector2(44, -1)
scale = Vector2(0.2, 0.2)
sprite_frames = SubResource("SpriteFrames_46d1w")
animation = &"attack"
autoplay = "stand"

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_2ng8k")
}

[node name="Player Detector" type="Area2D" parent="."]
position = Vector2(-4, 5)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Player Detector"]
position = Vector2(0, -13)
shape = SubResource("RectangleShape2D_k76xx")

[node name="HurtBox" type="Area2D" parent="."]
position = Vector2(44, -1)
scale = Vector2(0.2, 0.2)
collision_layer = 32
collision_mask = 4
monitoring = false
monitorable = false
script = ExtResource("8_jrr2h")

[node name="CollisionShape2D" type="CollisionShape2D" parent="HurtBox"]
position = Vector2(-225, 25)
rotation = 1.5708
shape = SubResource("CapsuleShape2D_qr3hx")

[node name="HitBox" type="Area2D" parent="."]
collision_layer = 16
collision_mask = 8
monitoring = false
monitorable = false
script = ExtResource("23_mhe5e")
metadata/_custom_type_script = "uid://cfdlbfbudy12s"

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitBox"]
position = Vector2(-3, 8)
rotation = 1.5708
shape = SubResource("CapsuleShape2D_emjoi")
disabled = true

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("24_r2iln")
bus = &"SFX"

[node name="AudioStreamPlayer2" type="AudioStreamPlayer" parent="."]
stream = ExtResource("25_emjoi")
bus = &"SFX"

[node name="AudioStreamPlayer3" type="AudioStreamPlayer" parent="."]
stream = ExtResource("26_emjoi")
bus = &"SFX"

[connection signal="body_entered" from="Player Detector" to="." method="_on_player_detector_body_entered"]
[connection signal="body_exited" from="Player Detector" to="." method="_on_player_detector_body_exited"]
[connection signal="area_entered" from="HitBox" to="." method="_on_hit_box_area_entered"]
